# python-modules-dts

./: .gitignore  README.md  pyproject.toml
module-a/app/: main.py  my_router.py  pet_store.py
module-a/src/: main.py
module-a/tests/: test_endpoint-0.py  test_pet_store.py
module_a/app/: main.py
module_a/app/routers/: pet_store.py  swapi.py
module_a/tests/: test_main.py  test_pet_store.py  test_swapi.py
module_common/lib/: observability.py
