[tool.poetry]
name = "module_a"
version = "0.1.0"
description = ""
authors = ["Marco Carrozzo <ozeta86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.23.0"
fastapi = "^0.111.0"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."